--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
+sudo: required
 rvm:
   - 2.1
+  --create
 install: gem install jekyll -v 2.5.3 
 script: jekyll build
 after_success: git push master
