--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,23 @@
 language: ruby
-sudo: required
 rvm:
-  - 2.1
-install: gem install jekyll -v 2.5.3 
-script: jekyll build
-after_success: git push master
+- 2.2.5
+
+install: gem install html-proofer jekyll -v 2.5.3
+
+
+before_script:
+ - chmod +x ./script/cibuild # or do this locally and commit
+
+exclude: [vendor]
+
+# Assume bundler is being used, therefore
+# the `install` step will run `bundle install` by default.
+script: ./script/cibuild
+
+script: jekyll build && htmlproofer ./_site
+
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+sudo: true
