--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 rvm:
 - 2.2.5
 
-install: gem install html-proofer jekyll -v 2.5.3
+install: gem install html-proofer 
+gem install jekyll -v 2.5.3
 
 
 before_script:
