--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.2.5
 
 install: gem install html-proofer 
-gem install jekyll -v 2.5.3
+install: gem install jekyll -v 2.5.3
 
 
 before_script:
