--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ exclude: [vendor]
 # the `install` step will run `bundle install` by default.
 script: ./script/cibuild
 
-script: jekyll build --destination ./site && htmlproofer ./_site
+script: jekyll build --source . --destination ./site 
+script: htmlproofer ./_site
 
 env:
   global:
