updated professional and added blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+
 # Site settings
 title: Your awesome title
 email: your-email@domain.com
@@ -10,7 +11,43 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 permalink: /404.html
+
 # Build settings
 markdown: kramdown
 source: .
 destination: ./_site
+
+
+#Plugins
+gems: [jekyll-paginate]
+
+
+
+# Outputting
+permalink:     date
+paginate_path: /page:num
+timezone:      null
+
+quiet:    false
+verbose:  false
+defaults: []
+
+liquid:
+  error_mode: warn
+
+# Markdown Processors
+rdiscount:
+  extensions: []
+
+redcarpet:
+  extensions: []
+
+kramdown:
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  input:          GFM
+  hard_wrap:      false
+  footnote_nr:    1
