--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,13 @@ install:
 
 before_script:
  - chmod +x ./script/cibuild # or do this locally and commit
+ - jekyll build --source . --destination ./site
 
 exclude: [vendor]
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
-
-script: jekyll build --source . --destination ./site 
+script: ./script/cibuild 
 script: htmlproofer ./_site
 
 env:
