--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ exclude: [vendor]
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
 script: ./script/cibuild 
-script: htmlproofer ./_site --allow-hash-href --http-status-ignore "999,403,404"
+script: htmlproofer ./_site --allow-hash-href true --http-status-ignore "999,403,404"
 
 env:
   global:
